hero image update - repaired image not showing for narrow mobile screens

--- a/scss/mobile.scss
+++ b/scss/mobile.scss
@@ -205,13 +205,13 @@ textarea {
   //   }
   // }
 
-  @media (max-width: 473px) {
-    background: url("/images/hero-table-computer-1x.jpg") left bottom / 100% 19rem no-repeat, url("/images/hero-computer-1x.png") 95% 1rem / 55% no-repeat;
+  // @media (max-width: 473px) {
+  //   background: url("/images/hero-table-computer-1x.jpg") left bottom / 100% 19rem no-repeat, url("/images/hero-computer-1x.png") 95% 1rem / 55% no-repeat;
 
-    @media (max-width: 390px) {
-      background: url("/images/hero-table-computer-1x.jpg") left bottom / 100% 20rem no-repeat, url("/images/hero-computer-1x.png") 95% 1rem / 55% no-repeat;
-    }
-  }
+  //   @media (max-width: 390px) {
+  //     background: url("/images/hero-table-computer-1x.jpg") left bottom / 100% 20rem no-repeat, url("/images/hero-computer-1x.png") 95% 1rem / 55% no-repeat;
+  //   }
+  // }
 
   .hero-positioning {
     p {
